--- a/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
@@ -1,39 +1,48 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-<header class="navbar navbar-masthead navbar-inverse navbar-static-top">
-    
+<header class="navbar navbar-default navbar-static-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">UMRA Membership Management</a>
+    </div>
+  </div>
 </header>
 
 <div id="container" class="container-fluid">
-  <div id="page-content-container" class="row-fluid page-content-container">
-    <div class="span3 row-fluid" style="float: left;">
-      <aside id="sidebar">
+  <div id="page-content-container" class="row">
+    <div class="col-sm-3" style="float: left;">
+      <aside id="sidebar" class="panel panel-default">
         <nav class="well sidebar-nav">
           <ul class="nav nav-list">
             <li class="nav-header">Manage Member Records</li>
-            <li><a href="{{ path('UMRA_Household') }}"><i class="icon-home"></i> Households</a></li>
-            <li><a href="{{ path('UMRA_Person') }}"><i class="icon-calendar"></i> People</a></li>
-            <li><a href="{{ path('UMRA_Residence') }}"><i class="icon-home"></i> Residence</a></li>
-            <li><a href="{{ path('UMRA_Phone') }}"><i class="icon-home"></i> Phone</a></li>
-            <li><a href="{{ path('UMRA_Trans') }}"><i class="icon-home"></i> Transactions</a></li>
-            <li><a href="{{ path('UMRA_Photo') }}"><i class="icon-home"></i> Photo</a></li>
-            <li><a href="{{ path('UMRA_Email', {'personId': 2}) }}"><i class="icon-home"></i> Email</a></li>
+            <li><a href="{{ path('UMRA_Household') }}"><span class="glyphicon glyphicon-home"></span> Households</a></li>
+            <li><a href="{{ path('UMRA_Person') }}"><span class="glyphicon glyphicon-user"></span> People</a></li>
+            <li><a href="{{ path('UMRA_Residence') }}"><span class="glyphicon glyphicon-home"></span> Residence</a></li>
+            <li><a href="{{ path('UMRA_Phone') }}"><span class="glyphicon glyphicon-earphone"></span> Phone</a></li>
+            <li><a href="{{ path('UMRA_Trans') }}"><span class="glyphicon glyphicon-usd"></span> Transactions</a></li>
+            <li><a href="{{ path('UMRA_Photo') }}"><span class="glyphicon glyphicon-picture"></span> Photo</a></li>
+            <li><a href="{{ path('UMRA_Email', {'personId': 2}) }}"><span class="glyphicon glyphicon-envelope"></span> Email</a></li>
             <li class="nav-header">UMRA</li>
-            <li><a href="{{ path('UMRA_Role') }}"><i class="icon-home"></i> Role</a></li>
-            <li><a href=""><i class="icon-off"></i> Logout</a></li>
+            <li><a href="{{ path('UMRA_Role') }}"><span class="glyphicon glyphicon-cog"></span> Role</a></li>
+            <li><a href=""><span class="glyphicon glyphicon-log-out"></span>Logout</a></li>
           </ul>
         </nav><!--/.well -->
         {% block sidebar %}{% endblock %}
       </aside><!--/span3-->
     </div>
-    <section id="modulecontent" class="span9" style="float: left;">
+    <section class="col-sm-9">
     {% block modulecontent %}
-        <div class="row-fluid">
+        <div class="row">
         </div>
     {% endblock %}
-    </section><!--/span9-->
-  </div><!--/row-->
-  <hr>
-</div><!--/.fluid-container-->
+    </section>
+  </div>
+</div>
 {% endblock %}
