--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
@@ -1,15 +1,18 @@
 {% extends 'UMRAMemberBundle::nav.html.twig' %}
 
 {% block modulecontent -%}
-    <h1>Household list</h1>
 
-    <table class="records_list">
+    <div class="page-header">
+        <h1>Households</h1>
+    </div>
+
+    <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th>Lastname</th>
-                <th>Firstname</th>
-                <th>Postalname</th>
-                <th>Id</th>
+                <th>Last Name</th>
+                <th>Fist Name</th>
+                <th>Postal Name</th>
+                <th>ID</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -21,12 +24,12 @@
                 <td>{{ entity.postalname }}</td>
                 <td>{{ entity.id }}</td>
                 <td>
-                <ul>
+                <ul class="list-inline">
                     <li>
-                        <a href="{{ path('UMRA_Household_show', { 'id': entity.id }) }}">show</a>
+                        <a class="btn btn-primary btn-sm" href="{{ path('UMRA_Household_show', { 'id': entity.id }) }}">View</a>
                     </li>
                     <li>
-                        <a href="{{ path('UMRA_Household_edit', { 'id': entity.id }) }}">edit</a>
+                        <a class="btn btn-warning btn-sm" href="{{ path('UMRA_Household_edit', { 'id': entity.id }) }}">Edit</a>
                     </li>
                 </ul>
                 </td>
@@ -35,11 +38,7 @@
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('UMRA_Household_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
-    {% endblock %}
+    <a class="btn btn-primary" href="{{ path('UMRA_Household_new') }}">
+        <span class="glyphicon glyphicon-plus"></span> Add
+    </a>
+{% endblock %}
