When viewing a person, link back to their household, not the person index.
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/show.html.twig
@@ -86,8 +86,8 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('UMRA_Person') }}">
-            Back to the list
+        <a href="{{ path('UMRA_Household_show', { id: entity.household.id }) }}">
+            Back to household
         </a>
     </li>
     <li>
