.col-*-*s are already floated left.
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
@@ -17,7 +17,7 @@
 
 <div id="container" class="container-fluid">
   <div id="page-content-container" class="row">
-    <div class="col-sm-3" style="float: left;">
+    <div class="col-sm-3">
       <nav class="well sidebar-nav">
         <ul class="nav nav-list">
           <li class="nav-header">Manage Member Records</li>
