--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/show.html.twig
@@ -6,8 +6,8 @@
     <table class="record_properties">
         <tbody>
             <tr>
-                <th>Prisec</th>
-                <td>{{ entity.prisec }}</td>
+                <th>Primary</th>
+                <td>{{ entity.primary }}</td>
             </tr>
             <tr>
                 <th>Address1</th>
