--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
@@ -3,6 +3,7 @@
 {% block modulecontent -%}
     <div class="page-header">
         <h2>Household of {{ entity.firstname }} {{ entity.lastname }}</h2>
+        <h4 class="text-muted">Postal Name: <small>{{ entity.postalname }}</small>
     </div>
 
     <div class="panel panel-primary">
@@ -64,27 +65,6 @@
             <a class="btn btn-primary" href="{{ path('UMRA_Residence_new') }}"><span class="glyphicon glyphicon-plus"></span> Add a Residence</a>
         </footer>
     </div>
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Last Name</th>
-                <td>{{ entity.lastname }}</td>
-            </tr>
-            <tr>
-                <th>First Name</th>
-                <td>{{ entity.firstname }}</td>
-            </tr>
-            <tr>
-                <th>Postal Name</th>
-                <td>{{ entity.postalname }}</td>
-            </tr>
-            <tr>
-                <th>ID</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-        </tbody>
-    </table>
-
 
     <div class="panel panel-primary">
         <header class="panel-heading">Members</header>
