The since property in residence doesn't need to be displayed with time, just date.
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
@@ -45,7 +45,7 @@
                     <td>{{ residence.state }}</td>
                     <td>{{ residence.zip }}</td>
                     <td>{{ residence.country }}</td>
-                    <td>{% if residence.since %}{{ residence.since|date('Y-m-d H:i:s') }}{% endif %}</td>
+                    <td>{% if residence.since %}{{ residence.since|date('m/d/Y') }}{% endif %}</td>
                     <td>{{ residence.forseason }}</td>
                     <td>
                     <ul class="list-inline">
