Set sidebar nav to a stacked nav-pills list.
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/nav.html.twig
@@ -19,7 +19,7 @@
   <div id="page-content-container" class="row">
     <div class="col-sm-3">
       <nav class="well sidebar-nav">
-        <ul class="nav nav-list">
+        <ul class="nav nav-pills nav-stacked">
           <li class="nav-header">Manage Member Records</li>
           <li><a href="{{ path('UMRA_Household') }}"><span class="glyphicon glyphicon-home"></span> Households</a></li>
           <li><a href="{{ path('UMRA_Person') }}"><span class="glyphicon glyphicon-user"></span> People</a></li>
