Fix residence phone display and creation routes on Household show view
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
@@ -45,10 +45,10 @@
                     <td>
                         <ul class="list-unstyled">
                             {% for phone in residence.phones %}
-                                <li>{{ phone.phnumber }} - {{ phone.phtype }}</li>
+                                <li><a href="{{ path('UMRA_Phone_show', { 'id': phone.id }) }}">{{ phone.phnumber }}</a></li>
                             {% endfor %}
                             <li>
-                                <a href="{{ path('UMRA_Phone_new', { 'resId': residence.id }) }}">
+                                <a href="{{ path('UMRA_Residence_Phone_new', { 'residenceId': residence.id }) }}">
                                     <small><span class="glyphicon glyphicon-plus"></span> Add</small>
                                 </a>
                             </li>
