--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
@@ -82,6 +82,7 @@
                 <th>Full Name</th>
                 <th>Member Since</th>
                 <th>Email Addresses</th>
+                <th>Phone Numbers</th>
             </thead>
             <tbody>
                 {% for person in entity.persons %}
@@ -91,10 +92,26 @@
                     <td>
                         <ul class="list-unstyled">
                             {% for email in person.emails %}
-                                <li>{{ email.email }}</li>
+                            <li>
+                                <a href="{{ path('UMRA_Email_show', {'id': email.id }) }}">
+                                    {{ email.email }}
+                                </a>
+                            </li>
                             {% endfor %}
                             <li>
-                                <a href="{{ path('UMRA_Email_new', { 'personId': person.id }) }}">
+                                <a href="{{ path('UMRA_Person_Email_new', { 'personId': person.id }) }}">
+                                    <small><span class="glyphicon glyphicon-plus"></span> Add</small>
+                                </a>
+                            </li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul class="list-unstyled">
+                            {% for phone in person.phones %}
+                                <li><a href="{{ path('UMRA_Phone_show', { 'id': phone.id }) }}">{{ phone.phnumber }}</a></li>
+                            {% endfor %}
+                            <li>
+                                <a href="{{ path('UMRA_Person_Phone_new', { 'personId': person.id }) }}">
                                     <small><span class="glyphicon glyphicon-plus"></span> Add</small>
                                 </a>
                             </li>
