Fix typo in Household index view
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
@@ -10,7 +10,7 @@
         <thead>
             <tr>
                 <th>Last Name</th>
-                <th>Fist Name</th>
+                <th>First Name</th>
                 <th>Postal Name</th>
                 <th>ID</th>
                 <th>Actions</th>
