Bring Person into the Household-centric workflow.
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
@@ -122,7 +122,7 @@
             </tbody>
         </table>
         <footer class="panel-footer">
-            <a class="btn btn-primary" href="{{ path('UMRA_Person_new') }}"><span class="glyphicon glyphicon-plus"></span> Add a Person</a>
+            <a class="btn btn-primary" href="{{ path('UMRA_Household_Person_new', {'householdId': entity.id }) }}"><span class="glyphicon glyphicon-plus"></span> Add a Person</a>
         </footer>
     </div>
 
