Bring Residence into the household-centric workflow
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
@@ -71,7 +71,7 @@
             </tbody>
         </table>
         <footer class="panel-footer">
-            <a class="btn btn-primary" href="{{ path('UMRA_Residence_new') }}"><span class="glyphicon glyphicon-plus"></span> Add a Residence</a>
+            <a class="btn btn-primary" href="{{ path('UMRA_Household_Residence_new', { 'householdId': entity.id }) }}"><span class="glyphicon glyphicon-plus"></span> Add a Residence</a>
         </footer>
     </div>
 
