--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/edit.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/edit.html.twig
@@ -5,12 +5,12 @@
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('UMRA_Residence') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    <ul class="list-inline">
+        <li>
+            <a class="btn btn-default" href="{{ path('UMRA_Household_show', { 'id': entity.household.id }) }}">
+                Back to household
+            </a>
+        </li>
+        <li>{{ form(delete_form) }}</li>
+    </ul>
 {% endblock %}
