--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/new.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/new.html.twig
@@ -5,11 +5,11 @@
 
     {{ form(form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('UMRA_Residence') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+    <ul class="list-inline">
+        <li>
+            <a class="btn btn-default" href="{{ path('UMRA_Household_show', { 'id': household.id }) }}">
+                Back to household
+            </a>
+        </li>
+    </ul>
 {% endblock %}
