legdistrict is "Legislative District" not "Legal District"
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/show.html.twig
@@ -21,7 +21,7 @@
                 <td>{% if entity.primary %}Yes{% else %}No{% endif %}</td>
             </tr>
             <tr>
-                <th>Legal District</th>
+                <th>Legislative District</th>
                 <td>{{ entity.legdistrict }}</td>
             </tr>
             <tr>
