Show email type along side email in household member list
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/show.html.twig
@@ -95,7 +95,7 @@
                             <li>
                                 <a href="{{ path('UMRA_Email_show', {'id': email.id }) }}">
                                     {{ email.email }}
-                                </a>
+                                </a> - {{ email.type }}
                             </li>
                             {% endfor %}
                             <li>
