--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/edit.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Residence/edit.html.twig
@@ -1,9 +1,18 @@
 {% extends 'UMRAMemberBundle::nav.html.twig' %}
 
 {% block modulecontent -%}
-    <h1>Residence edit</h1>
+    <div class="page-header">
+        <h1>Editing <strong>
+            {{ entity.address1 }}, {{ entity.city }} {% if entity.state %}{{ entity.state }}{% else %}{{ entity.country }}{% endif %}
+            </strong>
+        </h1>
+    </div>
 
-    {{ form(edit_form) }}
+    <div class="row">
+        <div class="col-sm-6">
+            {{ form(edit_form) }}
+        </div>
+    </div>
 
     <ul class="list-inline">
         <li>
